# image-searcher

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  util.sh
.devcontainer/: devcontainer.json
.github/workflows/: action.yml
__test__/: conftest.py  test_main.py
__test__/test_conectors/: test_bing.py
__test__/test_model/: test_search_result.py
__test__/test_routes/: test_search.py
__test__/test_views/: test_search.py
app/: main.py
app/connectors/: bing.py
app/models/: search_result.py
app/routes/: search.py
app/views/: search.py
