[tool.poetry]
name = "image-searcher"
version = "0.1.0"
description = ""
authors = ["doara-developer <doaradev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
bandit = "^1.6.2"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
flake8-quotes = "^3.2.0"
flake8-print = "^3.1.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
